# MarusansiBasisDashboard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yaml
.github/workflows/: docker-publish.yml
locales/: en.toml  ja.toml
src/: main.rs
templates/: admin.html  card_inner.html  error_inner.html  index.html  players_inner.html  worlds_inner.html
